# friend-hub

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  package-lock.json  pyproject.toml  test_websocket.html
backend/: .env.example  Dockerfile  README.md  bootstrap_admin_invite.py  cleanup_test_users.py  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/migrations/: 002_add_reply_to.sql  003_add_group_members.sql  004_add_events_and_photos.sql  005_add_persistent_user_identity.sql  006_add_photo_folders.sql  007_add_phase1_friends_hub.sql  008_add_notifications.sql  009_add_photo_upload_metadata.sql  010_add_hub_items.sql  011_add_event_posts.sql  011_add_user_avatar.sql  012_add_event_cover_and_invites.sql  013_add_event_photo_tags.sql  014_add_photo_caption_tags.sql  015_add_ai_usage_log.sql  016_add_bot_user.sql  017_add_import_tracking.sql  018_add_item_history.sql  018_add_push_subscriptions.sql  019_add_member_profiles.sql  020_add_chat_event_polls.sql  021_add_photo_hub_item_and_cover.sql  022_add_cover_photo_position.sql  023_add_archive_fields.sql  024_add_home_appearance.sql  025_add_ai_memory_and_suggestions.sql  026_add_ai_agent_runs.sql  027_invite_pin_auth.sql  028_fix_hub_bot_username.sql  029_member_cleanup_identity_foundation.sql  030_hub_bot_profile.sql  030_link_messages_to_imported_identities.sql  031_ai_draft_actions.sql  032_chat_vote_actions.sql  033_add_group_notice.sql  034_add_image_embedding_foundation.sql  035_extend_ai_usage_log.sql  036_add_photo_soft_delete.sql  038_add_rooms.sql  (+27 more)
(+388 files in other folders)
